réalisation du bloc Headtext du module AEPE

--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,199 +1,6 @@
-
-<mjml>
-  <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Santé</mj-title>
-    <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
-    <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-    <mj-raw>
-      <meta charset="UTF-8">
-      <meta name='color-scheme' content='light'/>
-      <meta name='supported-color-schemes' content='light'/>
-      <meta name="format-detection" content="telephone=no"/>
-      <meta name="format-detection" content="date=no"/>
-      <meta name="format-detection" content="address=no"/>
-      <meta name="format-detection" content="email=no"/>
-    </mj-raw>
-    <mj-attributes>
-      <mj-all font-family="Roboto, Arial, Helvetica,sans serif"/>
-      <mj-class name="T36-900" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="900"/>
-      <mj-class name="T36-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="36px" line-height="36px" font-weight="300"/>
-      <mj-class name="T24-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="700"/>
-      <mj-class name="T24-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" line-height="28px" font-weight="300"/>
-      <mj-class name="T16-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="700"/>
-      <mj-class name="T16-500" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="500"/>
-      <mj-class name="T16-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="400"/>
-      <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
-      <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
-      <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #2386C8" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#2386c8"></mj-button>
-      <mj-class name="cT1" color="#1a1a1a"/>
-      <mj-class name="cT0" color="#4d4d4d"/>
-      <mj-class name="cT2" color="#999999"/>
-      <mj-class name="cTW" color="#ffffff"/>
-      <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#2386c8"/>
-      <mj-class name="bg0" background-color="#2386c8"/>
-      <mj-class name="c1" color="#114364"/>
-      <mj-class name="bg1" background-color="#114364"/>
-    </mj-attributes>
-    <mj-breakpoint width="420px"></mj-breakpoint>
-  </mj-head>
-  <mj-body background-color="#f2f2f2" width="600px">
-    <mj-section padding="0">
-      <mj-column>
-        <mj-text align="center"><a style="color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px" href="{{mirror}}">Voir la version en ligne</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a style="color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px;" href="{{ unsubscribe }}">Se désinscrire de la liste de diffusion</a></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px">
-      <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/18LWQj8/logo-ESante.png" alt="logo Ecosup Santé"/>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0" mj-class="bg0">
-      <mj-column width="100%" padding="3px 0">
-        <mj-image padding="0" width="600px" src="https://i.ibb.co/6RYDGsQN/jpo-Aff21062025.png" alt="affiche de la jpo du samedi 21 juin 2025"/>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0" mj-class="bg0">
-      <mj-group width="100%">
-        <mj-column width="50%">
-          <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
-        </mj-column>
-        <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/Kj1CLhZW/sm2.jpg" alt="travail de secrétariat médical"/>
-        </mj-column>
-        <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/j9t15M2c/jpo-SMImg21062025.jpg" alt="utilisation du clavier pour réaliser le tavail quotidien"/>
-        </mj-column>
-      </mj-group>
-      <mj-column mj-class="bg0" width="100%">
-        <mj-text align="center" padding="3px 20px" mj-class="T16-700 cTW">Journée Portes Ouvertes samedi&nbsp;21&nbsp;juin&nbsp;de&nbsp;9h30&nbsp;à&nbsp;13h</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" padding="20px"> 
-      <mj-column width="88%">
-        <mj-text padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px"><span style="font-weight:900;">Parcoursup</span> ne vous a pas donné de réponse positive&nbsp;?</mj-text>
-        <mj-text padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px">Rassurez-vous, tout est encore possible</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : <span style="font-weight:700;color:#1a1a1a;">le secrétariat médical</span>.</mj-text>
-        <mj-text padding="10px" padding-bottom="0" mj-class="T16-400 cT0">Vous vous intéressez au secrétariat médical, à la gestion des dossiers patients, à l'organisation des rendez-vous ou à la coordination des soins&nbsp;? Venez découvrir notre formation</mj-text>
-        <mj-text padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0"><span style="color:#2386C8;">&#x25CF;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire Médical(e) (en initial ou en alternance)</mj-text>
-        <mj-text padding="10px" padding-top="0" mj-class="T16-400 cT0">à l'occasion de notre dernière <span style="font-weight:700;color:#1a1a1a;">Journée Portes Ouvertes</span> de l'année.</mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT1"><img align="left" width="60px" src="https://i.ibb.co/JwhbXJrs/cal-SM21062025.png" alt=""/>
-          <div style="font-weight:700;padding-left:70px;color:#2386C8;">Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h</div>
-          <div style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;"><strong>Ecosup Campus</strong> 17 rue des Ursulines - Tourcoing</div>
-        </mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Chez <span style="font-weight:700;color:#1a1a1a;">Ecosup Campus</span>, nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, <span style="font-weight:700;color:#1a1a1a;">ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir</span>, mais un vrai dialogue, humain et bienveillant, avec chaque candidat.</mj-text>
-        <mj-text padding="10px" mj-class="T16-400 cT0">Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. <span style="font-weight:700;color:#1a1a1a;">Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine</span>.</mj-text>
-        <mj-text padding="10px" mj-class="T16-700 cT1">Rejoignez-nous et donnez un vrai cap à votre avenir.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section mj-class="bgW" padding="0 30px 20px 20px">
-      <mj-group>
-        <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Clément Duhamel</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable pédagogique</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Immobilier</mj-text>
-        </mj-column>
-        <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique immobilier"/>
-        </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-wrapper background-color="#ffffff" padding="20px">
-      <mj-section padding="0px">
-        <mj-group width="240px">
-          <mj-column width="33.333333%">
-            <mj-image align="right" padding="10px" width="75px" src="https://i.ibb.co/DPZSYNzY/google-Map96x96x2.png" alt="google maps" href="https://www.google.com/maps/search/?api=1&amp;query=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing"/>
-          </mj-column>
-          <mj-column width="33.333333%">
-            <mj-image align="center" padding="10px" width="75px" src="https://i.ibb.co/zTWty3n5/waze96x96x2.png" alt="waze" href="https://waze.com/ul?q=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing"/>
-          </mj-column>
-          <mj-column width="33.333333%">
-            <mj-image align="left" padding="10px" width="75px" src="https://i.ibb.co/6c99Z3Jt/apple-Maps96x96x2.png" alt="apple maps" href="http://maps.apple.com/?q=Ecosup-campus,+17+place+Charles+et+Albert+Roussel,+59200+Tourcoing"/>
-          </mj-column>
-        </mj-group>
-      </mj-section>
-      <mj-section padding="0px">
-        <mj-column width="75%">
-          <mj-text align="center" padding="0" mj-class="T24-300 cT1">Où nous trouver</mj-text>
-          <mj-text align="center" padding="0" padding-bottom="10px" mj-class="T13-400 cT0">cliquez sur l'icon de votre choix pour organiser votre itinéraire</mj-text>
-        </mj-column>
-      </mj-section>
-    </mj-wrapper>
-    <mj-section mj-class="bg1" padding="0 20px">
-      <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-sante.fr/secretaire-medicale-2" target="_blank">www.ecosup-sante.fr</a></mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
-      </mj-column>
-      <mj-column width="80%">   
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">8 mois</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
-        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
-      <mj-section padding="0">
-        <mj-column>
-          <mj-text align="center" padding="20px 25px" padding-bottom="0px" mj-class="T24-300 cT2">Vie étudiante à Ecosup&nbsp;Campus</mj-text>
-          <mj-text align="center" padding="0" mj-class="T13-400 cT2">suivez nous sur les réseaux sociaux</mj-text>
-        </mj-column>
-      </mj-section>
-      <mj-section padding="0">  
-        <mj-column>
-          <mj-social align="center" padding="0 25px" icon-size="30px" icon-height="30px" inner-padding="20px" mode="horizontal">
-            <mj-social-element src="https://i.ibb.co/SwnfcyPX/facebook-H21062025.png" href="https://www.facebook.com/EcosupCamp/" target="_blank" alt="icon facebook"></mj-social-element>
-            <mj-social-element src="https://i.ibb.co/35HB8DPm/instagram-H21062025.png" href="https://www.instagram.com/ecosup.campus/" target="_blank" alt="icon instagram"></mj-social-element>
-            <mj-social-element src="https://i.ibb.co/RG769FDr/linkedin-H21062025.png" href="https://www.linkedin.com/company/ecosup-campus" target="_blank" alt="icon linkedin"></mj-social-element>
-          </mj-social>
-        </mj-column>
-      </mj-section>
-    </mj-wrapper>
-    <mj-section background-color="#1a1a1a" padding="32px" padding-top="0">
-      <mj-column width="320px">
-        <mj-image width="140px" padding="0" border="none" align="center" target="_blank" src="https://i.ibb.co/8K8y4kW/ECOSUP-CAMPUS-Blanc012024.png" href="https://ecosup-campus.com" alt="Logo Ecosup Campus"/>
-        <mj-text padding="0" align="center" mj-class="T13-400"><a style="text-decoration:none;color:#999999" href="https://urlr.me/WS5h6U">17 Place Charles et Albert Roussel</a></mj-text>
-        <mj-text padding="0" align="center" mj-class="T13-400" text-transform="uppercase"><a style="text-decoration:none;color:#999999" href="https://urlr.me/WS5h6U">59200 Tourcoing</a></mj-text>
-        <mj-text padding="0" align="center" mj-class="T13-400"><a style="text-decoration:none;font-weight:700;color:#999999;" href="tel:0320700606">Tél 03.20.70.06.06</a>               </mj-text>
-        <mj-text padding="0" align="center" mj-class="T13-400"><a style="text-decoration:none;color:#999999;" href="mailto:contact@ecosup-campus.fr">contact@ecosup-campus.fr</a></mj-text>
-        <mj-text padding="0" align="center" mj-class=" T13-400"><a style="text-decoration:none;font-weight:700;color:#999999;" href="https://ecosup-campus.fr">www.ecosup-campus.fr</a> </mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="30px">
-      <mj-column width="320px">
-        <mj-text padding="0" align="center" mj-class="cT0 T10-300"><a style="color:#4d4d4d;font-size:10px;font-weight:500" href="{{ mirror}}">Voir la version en ligne</a>           </mj-text>
-        <mj-text padding="0" align="center" mj-class="cT0 T10-300">Pour être sûr(e) de recevoir nos communications, ajoutez <a style="text-decoration:none;color:#4d4d4d;" href="mailto:contact@ecosup-campus.fr">contact@ecosup-campus.fr</a> dans votre carnet d'adresses.</mj-text>
-        <mj-text padding="0" align="center" mj-class="cT0 T10-300"><a style="color:#4d4d4d;font-size:10px;font-weight:500;" href="{{ unsubscribe }}">Se désinscrire de la liste de diffusion</a></mj-text>
-      </mj-column>
-    </mj-section>
-  </mj-body>
-</mjml>
+extends templates/_aepe
+<mj-section padding="0">
+  <mj-column>
+    <mj-text align="center"><a style="color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px" href="{{mirror}}">Voir la version en ligne</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a style="color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px;" href="{{ unsubscribe }}">Se désinscrire de la liste de diffusion</a></mj-text>
+  </mj-column>
+</mj-section>
