--- a/src/includes/immobilier/_headtext.pug
+++ b/src/includes/immobilier/_headtext.pug
@@ -1,16 +1,16 @@
 //-Header Immobilier Texte
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
-        mj-text(padding="5px 10px" padding-bottom="0" mj-class="T36-300 c0" letter-spacing="1px") #[span(style="font-weight:900;") Parcoursup] ne vous a pas donné de réponse positive&nbsp;?
-        mj-text(padding="5px 10px" padding-top="0" mj-class="T36-900 c0" letter-spacing="1px") Rassurez-vous, tout est encore possible
+        mj-text(padding="5px 10px" padding-bottom="0" mj-class="T32-300 c0" letter-spacing="1px") #[span(style="font-weight:900;") Parcoursup] ne vous a pas donné de réponse positive&nbsp;?
+        mj-text(padding="5px 10px" padding-top="0" mj-class="T32-900 c0" letter-spacing="1px") Rassurez-vous, tout est encore possible
         mj-text(padding="10px" mj-class="T16-400 cT0") Les résultats tombés il y a quelques jours ont peut-être été une déception... mais ils ne remettent pas en cause votre avenir. Il existe d'autres voies, concrètes et accessibles, pour construire un projet solide dans un secteur passionnant : #[span(style="font-weight:700;color:#1a1a1a;") l'immobilier].
         mj-text(padding="10px" padding-bottom="0" mj-class="T16-400 cT0") Vous vous intéressez à l'immobilier, à la valorisation des biens, à l'analyse du marché ou à la négociation de transactions&nbsp;? Venez découvrir notre formation
         mj-text(padding="0px 10px" padding-left="20px" mj-class="T16-400 cT0") #[span(style="color:#EC6608;") &#x25CF;] #[span(style="font-weight:700;color:#1a1a1a;") BTS] Professions Immobilières
         mj-text(padding="10px" padding-top="0" mj-class="T16-400 cT0") à l'occasion de notre dernière #[span(style="font-weight:700;color:#1a1a1a;") Journée Portes Ouvertes] de l'année.
         mj-text(padding="5px 10px" mj-class="T16-400 cT1")
-            img(align="left" width="60px" src="https://i.ibb.co/Kzzws3wn/cal-Com-Immo21062025.png" alt="")/
+            img(align="left" width="60px" src="https://i.ibb.co/Kzzws3wn/cal-Com-Immo21062025.png" alt="Calendrier icon Immobilier")/
             div(style="font-weight:700;padding-left:70px;color:#EC6608;") Samedi 21 juin 2025 de&nbsp;9h30&nbsp;à&nbsp;13h
-            div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") #[strong Ecosup Campus] 17 rue des Ursulines - Tourcoing
+            div(style="padding-left:70px;font-family:Roboto,Arial,Helvetica,sans-serif;font-style:normal;font-size:13px;line-height:17px;font-weight:400;") #[strong Ecosup Campus] #[a(style="text-decoration:none;color:#1a1a1a;" target="_blank" href="https://www.google.fr/maps/place/17+Pl.+Charles+et+Albert+Roussel,+59200+Tourcoing/") 17 place Charles et Albert Roussel - Tourcoing]
         mj-text(padding="10px" mj-class="T16-400 cT0") Chez #[span(style="font-weight:700;color:#1a1a1a;") Ecosup Campus], nous croyons avant tout à l'échange, à l'écoute et à la rencontre. Ici, #[span(style="font-weight:700;color:#1a1a1a;") ce n'est pas un algorithme ni un dossier impersonnel qui décide de votre avenir], mais un vrai dialogue, humain et bienveillant, avec chaque candidat.
         mj-text(padding="10px" mj-class="T16-400 cT0") Nos équipes seront présentes pour vous accueillir, répondre à vos questions et vous accompagner, que vous veniez de Parcoursup ou non. #[span(style="font-weight:700;color:#1a1a1a;") Il n'est pas trop tard pour trouver sa voie et démarrer une formation dès la rentrée prochaine].
         mj-text(padding="10px" mj-class="T16-700 cT1") Rejoignez-nous et donnez un vrai cap à votre avenir.
