--- a/src/includes/aepe/_headtext.pug
+++ b/src/includes/aepe/_headtext.pug
@@ -17,8 +17,9 @@ mj-section(background-color="#ffffff" padding="20px")
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
-            mj-text(align="right" padding="0px 10px" mj-class="T13-700 cT1") Clément Duhamel
+            mj-text(align="right" padding="0px 10px" mj-class="T13-700 cT1") Jérôme Poulain
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable pédagogique
-            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Immobilier
+            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Petite Enfance 
+            mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Santé
         mj-column(width="20%") 
-            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/twBy3v1L/Clement21062025.jpg" alt="Clément Duhamel, responsable pédagogique immobilier")/
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/qM5vq0xh/Jerome21062025.jpg" alt="Jérôme Poulain, responsable pédagogique AEPE")/
